# fcitx5-emoji-picker-gtk

./: .gitignore  README.md  fcitx5-emoji-picker-gtk.conf  gen_emojis.py  meson.build
include/: emoji-button.hpp  emojis.hpp  fcitx5-module.hpp  window.hpp
src/: emoji-button.cpp  emojis.cpp  fcitx5-module.cpp  window.cpp
